# bsFight

./: BUILD.md  README.md  battle.js  food_battle_game.html
.github/workflows/: build-test.yml  release.yml
app/: index.html  package-lock.json  package.json  vite.config.js
app/src/: App.css  App.jsx  BetPage.jsx  JoinPage.jsx  main.jsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: http_server.rs  lib.rs  websocket.rs
app/src/styles/: battle.css
app/src/utils/: actionGenerator.js  battleEngine.js  helpers.js  networkHelper.js  soundConfig.js  soundEngine.js  wsConnection.js
scripts/: simulate.js
