[package]
name = "office-battle-royale"
version = "0.1.0"
description = "Office Battle Royale - A fun tournament battle game"
authors = ["bsFight"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
local-ip-address = "0.6"
rust-embed = "8"
mime_guess = "2"
